fix: balance archive header line spacing (1:1 ratio)
Changed to equal spacing above and below the separator line:
- padding-bottom: calc(3rem + 1.5vw) (~52px)
- margin-bottom: calc(3rem + 1.5vw) (~52px)

Result: Perfectly balanced 1:1 ratio for visual harmony

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2002,7 +2002,7 @@ textarea {
 
 	&.archive-box {
 		padding-bottom: calc(3rem + 1.5vw);
-		margin-bottom: calc(5rem + 2.5vw);
+		margin-bottom: calc(3rem + 1.5vw);
 		border-bottom: 1px solid var(--color-background-contrast);
 	}
 
